2008-10-30  Jeremy Cribb <jcribb@email.unc.edu>
	* thinning_force_rod: added.  Given a Cross or Carreau model fit, this function generates force requirements that provides (offline) what force is necessary to achieve a desired shear rate(s) for a set of input ROD diameters.
	* thinningexpt_reqs_rod.m:  added.  Uses above to generate figure and reports force requirmeents for a driven bead thinning experiment.
	* thinning_force.m: added.  Fixed error in fitting function.
	* thinningexpt_reqs.m: added.  same.
	
2008-10-27  Kris Ford <krisford@email.unc.edu>
	* .cvsignore added.

2008-09-16  Jeremy Cribb <jcribb@email.unc.edu>
	* thinning_force.m: added.  Given a Cross or Carreau model fit, this function generates force requirements that provides (offline) what force is necessary to achieve a desired shear rate(s) for a set of input bead diameters.
	* thinningexpt_reqs.m: added.  Uses above to generate figure and reports force requirmeents for a driven bead thinning experiment.

2008-02-28  Jeremy Cribb <jcribb@email.unc.edu>
	* noise_expt.m: updated call to zerodaq to accomdate new parameter.
	* shear_wave_MCL_controller.m: same.
	* shear_wave_MCL_oscillator.m: same.

2007-03-19  Jeremy Cribb <jcribb@email.unc.edu>
	* shear_rate_max.m: added.  converts a bead velocity into a maximum shear rate, located at the beads surface, normal to the flow direction.

2006-04-24  Jeremy Cribb <jcribb@email.unc.edu>
	* noise_expt.m:  added.  first pass at video tracking calibration and noise characterization.  Will be prettied up very soon.

2006-04-24  Jeremy Cribb <jcribb@email.unc.edu>
	* shear_wave_MCL_controller.m: removed extra zerodaq call that prematurely exited the expected normal run.

2005-11-11  Jeremy Cribb <jcribb@email.unc.edu>
	* shear_wave_MCL_controller.m: added.  extended version of oscillator that does additional testing types- constant velocity thus far.  more waveforms forthcoming....

2005-11-02  Kalpit Desai <kvdesai@email.unc.edu>